[gd_scene load_steps=8 format=3 uid="uid://bww7fw8oscti6"]

[ext_resource type="Script" uid="uid://0iy6fs3g3xve" path="res://scripts/progress_bar.gd" id="1_8un81"]
[ext_resource type="Texture2D" uid="uid://dtn61ntkr2y6i" path="res://assets/progress_bar/computer.png" id="1_vt3ux"]
[ext_resource type="FontFile" uid="uid://eunvrt3o0wn7" path="res://assets/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" id="3_1iuoo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vt3ux"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8un81"]
bg_color = Color(0.401378, 0.73, 0.1971, 1)
corner_radius_top_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vt3ux"]
bg_color = Color(0.13, 0.13, 0.13, 0.588235)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1iuoo"]
bg_color = Color(0.6, 0.168, 0.168, 1)
corner_radius_top_left = 4
corner_detail = 1

[node name="MiniClick" type="CanvasLayer"]

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 1
custom_minimum_size = Vector2(24, 240)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 264.0
grow_horizontal = 0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_vt3ux")
theme_override_styles/fill = SubResource("StyleBoxFlat_8un81")
value = 100.0
fill_mode = 3
show_percentage = false
script = ExtResource("1_8un81")

[node name="EchoBar" type="ProgressBar" parent="ProgressBar"]
z_index = -1
custom_minimum_size = Vector2(24, 240)
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_vt3ux")
theme_override_styles/fill = SubResource("StyleBoxFlat_1iuoo")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="Timer" type="Timer" parent="ProgressBar"]
wait_time = 0.3
autostart = true

[node name="Computer" type="Sprite2D" parent="."]
position = Vector2(952, 128)
texture = ExtResource("1_vt3ux")

[node name="ComputerScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = 869.0
offset_top = 60.0
offset_right = 980.0
offset_bottom = 140.0
color = Color(0, 0, 0, 0)

[node name="Message" type="Label" parent="ComputerScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_1iuoo")
theme_override_font_sizes/font_size = 18
text = "VocÃª foi
demitid@"

[connection signal="timeout" from="ProgressBar/Timer" to="ProgressBar" method="_on_timer_timeout"]
[connection signal="gui_input" from="ComputerScreen" to="ProgressBar" method="_on_computer_screen_gui_input"]
